SUBDIRS = icons

bin_PROGRAMS = fxcd
fxcd_SOURCES = \
		icons.h		\
		icons.cpp	\
		CDBMPIcon.h	\
		CDBMPIcon.cpp	\
		CDChoiceDialog.h	\
		CDChoiceDialog.cpp	\
		CDInfo.h	\
		CDInfo.cpp	\
		CDPlayer.h	\
		CDPlayer.cpp	\
		CDPreferences.h	\
		CDPreferences.cpp	\
		CDSeekButton.h	\
		CDSeekButton.cpp	\
		CDServerDialog.h	\
		CDServerDialog.cpp	\
		CDWindow.h	\
		CDWindow.cpp	\
		cd.cpp



