dnl Process this file with autoconf to produce a configure script.
AC_INIT(CDPlayer.h)
AM_INIT_AUTOMAKE(fxcd, 0.9.6)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for the FOX reswrap utility
AC_CHECK_PROG(RESWRAP,reswrap,reswrap)
if test -z "$RESWRAP"; then
  AC_MSG_ERROR("FOX reswrap utility not found")
fi

dnl Checks for libraries.
dnl Replace `main' with a function in -lFOX:
AC_CHECK_LIB(FOX, main)
dnl Replace `main' with a function in -lcdaudio:
AC_CHECK_LIB(cdaudio, main)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile icons/Makefile)
