dnl Process this file with autoconf to produce a configure script.
AC_INIT(CDPlayer.h)
AM_INIT_AUTOMAKE(fxcd, 0.9.6)

dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for the FOX reswrap utility
AC_CHECK_PROG(RESWRAP,reswrap,reswrap)
if test -z "$RESWRAP"; then
  AC_MSG_ERROR("FOX reswrap utility not found")
fi

dnl Checks for libraries.
AC_CHECK_HEADERS(fox/fx.h,,AC_MSG_ERROR("fox/fx.h not found"))
dnl Replace `main' with a function in -lFOX:
dnl AC_CHECK_LIB(FOX, main)
LIBS="${LIBS} -lFOX"

dnl Replace `main' with a function in -lcdaudio:
AC_CHECK_HEADERS(cdlyte.h,,AC_MSG_ERROR("cdlyte.h not found"))
dnl AC_CHECK_LIB(cdlyte, main)
LIBS="${LIBS} -lcdlyte"

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile icons/Makefile)
