EXTRA_DIST = \
		icons.h 	         \
		CDutils.h	         \
		CDBMPIcon.h	         \
		CDCanvas.h	         \
		CDChoiceDialog.h	 \
		CDData.h                 \
                CDDBInfo.h               \
                CDDBServerListExecutor.h \
                CDDBServerListTask.h     \
                CDDBSettings.h           \
                CDdefs.h                 \
                CDdefs.h.in              \
		CDInfo.h	         \
                CDInfoTask.h             \
		CDListBox.h	         \
		CDPlayer.h	         \
		CDPreferences.h	         \
		CDSeekButton.h	         \
		CDServerDialog.h	 \
		CDWindow.h
